241_aks_ingress_frontdoor_multi_region/kubernetes/3-ingress-internal-pls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapi-pls
  namespace: webapi
spec:
  ingressClassName: nginx-internal-static-pls
  rules:
  - http:
      paths:
      - backend:
          service:
            name: webapi
            port:
              number: 80
        path: /
        pathType: Prefix
